<resources>
    <string name="app_name">Polis</string>
    <string name="address">Address</string>
    <string name="done">Done</string>
    <string name="age">Age</string>
    <string name="email">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="default_content_description">default_content_description</string>
    <string name="coming_soon">Coming Soon.....</string>
    <string name="title_policy">Title Policy</string>
    <string name="policydescription">PolicyDescription</string>
    <string name="gender">Gender</string>

</resources>
